styles/styles.css
img {
	max-width: 100%;
	height: auto;
	object-fit: contain;
}

@font-face {
	font-family: "PT Sans";
	font-style: normal;
	font-weight: 400;
	src: url("../fonts/ptsans-400.woff2") format("woff2");
	font-display: swap;
}

@font-face {
	font-family: "PT Sans";
	font-style: normal;
	font-weight: 700;
	src: url("../fonts/ptsans-700.woff2") format("woff2");
	font-display: swap;
}

html {
	height: 100%;
}

body {
	margin: 0;
	display: flex;
	flex-direction: column;
	min-height: 100%;
	font-family: "PT Sans", sans-serif;
	font-size: 18px;
	line-height: 21px;
	color: #333333;
	background-color: #ffffff;
}

.visually-hidden {
	position: absolute;
	width: 1px;
	height: 1px;
	margin: -1px;
	padding: 0;
	border: 0;
	clip: rect(0 0 0 0);
	overflow: hidden;
}

.page-container {
	margin: auto;
	width: 1200px;
	box-shadow: 0 0 15px 0 #00000033;
}

.page-header {
	color: #000000;
	background-color: #ffffff;
	z-index: 1;
}

.navigation {
	display: flex;
	width: 1060px;
	margin: 0 auto;
}

.navigation-list {
	width: 340px;
	margin: 0;
	padding: 0;
	padding-left: 30px;
	list-style-type: none;
	display: flex;
}

.navigation-logo {
	margin-bottom: -10px;
}

.navigation-user {
	width: 270px;
	margin-left: auto;
	display: flex;
	justify-content: flex-end;
}

.navigation-user .navigation-link {
	min-width: 20px;
	min-height: 20px;
	padding: 22px 12px;
}

.navigation-link {
	font-size: 20px;
	font-weight: 700;
	line-height: 24px;
	text-align: left;
	color: #000000;
	text-decoration: none;
	text-transform: none;
	display: block;
	padding: 20px 16px;
	flex-wrap: wrap;
	position: relative;
}

.navigation-link:hover {
	color: rgba(0, 0, 0, 0.6);
}

.navigation-link:active {
	color: rgba(0, 0, 0, 0.3);
}

.navigation-link[aria-current="page"]::after {
	content: "";
	display: block;
	position: absolute;
	height: 2px;
	background-color: #756257;
	bottom: -1px;
	left: 16px;
	right: 16px;
}

.icon-loupe::before {
	content: "";
	display: block;
	width: 20px;
	height: 20px;
	mask: url("../icons/stack.svg#search") no-repeat center;
	color: currentcolor;
}

.icon-loupe:hover::before {
	color: rgba(0, 0, 0, 0.6);
}

.icon-loupe:active::before {
	color: rgba(0, 0, 0, 0.3);
}

.icon-loupe:disabled::before {
	color: rgba(0, 0, 0, 0.1);
}


.icon-favourite::before {
	content: "";
	display: block;
	width: 20px;
	height: 20px;
	mask: url("../icons/stack.svg#favourites") no-repeat center;
	background-color: currentcolor;
}

.icon-favourite:hover::before {
	color: rgba(0, 0, 0, 0.6);
}

.icon-favourite:active::before {
	color: rgba(0, 0, 0, 0.3);
}

.icon-favourite:disabled::before {
	color: rgba(0, 0, 0, 0.1);
}

.favourites-quantity {
	position: absolute;
	display: block;
	border-radius: 10px;
	background-color: #7db54f;
	font-size: 10px;
	line-height: 10px;
	text-align: center;
	color: #ffffff;
	font-weight: 400;
	padding: 5px;
	top: 12px;
	right: 4px;
}

.button-search-hotel-header {
	font-size: 16px;
	font-weight: 700;
	line-height: 20px;
	text-align: center;
	color: #ffffff;
	background-color: #756157;
	text-decoration: none;
	text-transform: uppercase;
	display: block;
	padding: 8px 34px;
	margin-block: 14px;
	margin-left: 20px;
	border-radius: 4px;
	cursor: pointer;
}

.button-search-hotel-header:hover {
	background-color: #615048;
}

.button-search-hotel-header:focus {
	background-color: #615048;
}

.button-search-hotel-header:active {
	color: #9e9089;
}

.button-search-hotel-header:disabled {
	background-color: #e5e5e5;
}


.main-container {
	flex-grow: 1;
}

.welcome-to-sedona {
	background-color: #3b6689;
	color: #ffffff;
	background-image: url("../images/inner-white-background.png"), url("../images/index-main-background.jpg");
	background-position: bottom;
	background-size: 100% auto;
	background-repeat: no-repeat;
	display: block;
	margin: 0 auto;
	width: 1200px;
	height: 485px;
}

.welcome-to-sedona-img {
	display: block;
	margin: 0 auto;
	padding-top: 51px;
}

.sedona-discripton-section {
	display: flex;
	flex-direction: column;
	padding-top: 69px;
	padding-right: 260px;
	padding-bottom: 90px;
	padding-left: 260px;
}

.sedona-description {
	font-weight: 700;
	font-size: 30px;
	line-height: 36px;
	text-align: center;
	color: #000000;
	background-color: #ffffff;
	text-transform: uppercase;
	margin: 0;
	margin-bottom: 25px;
	position: relative;
}

.sedona-description-advantages {
	font-weight: 400;
	font-size: 22px;
	line-height: 26px;
	text-align: center;
	color: #000000;
	background-color: #ffffff;
	margin: 0;
}

.feautures-list {
	margin: 0;
	padding: 0;
	color: #ffffff;
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	list-style-type: none;
	flex-direction: row;
	width: 1200px;
}

.advantages-item {
	width: 400px;
	height: 385px;
	margin: 0;
	padding: 0;
	display: flex;
	text-align: center;
	flex-wrap: wrap;
}

.main-h3-and-p {
	display: block;
	padding: 92px 85px 111px 85px;
}

.item-h3-and-p {
	display: block;
	padding: 81px 84px 85px;
}

.icon-h3-and-p {
	display: block;
	padding: 50px 85px 50px 81px;
}

.main-advantages-item {
	background-color: #82b3d3;
	width: 1200px;
	display: flex;
	text-align: center;
}

.main-advantages-item-2 {
	background-color: #82b3d3;
	width: 1200px;
	display: flex;
	flex-direction: row-reverse;
	text-align: center;
}


.light-item {
	background-color: #eff6fb;
	color: #000000;
}

.dark-item {
	background-color: #e4f0f7;
	color: #000000;
}

.white-item {
	background-color: #ffffff;
	color: #000000;
}

.advantages-title {
	font-size: 24px;
	line-height: 28px;
	font-weight: 700;
	color: #000000;
	text-transform: uppercase;
	display: block;
}

.advantages-title-light::after {
	content: "";
	display: block;
	width: 60px;
	height: 2px;
	background-color: #a8acaf;
	margin-block: 30px;
	margin-inline: auto;
}

.advantages-title-main {
	font-size: 24px;
	line-height: 28px;
	font-weight: 700;
	text-transform: uppercase;
	display: block;
	margin: auto;
}
/* ... */

